# shogi-api

./: README.md  pyproject.toml
shogi_api/: main.py
strategy-api/: main.py
